--- a/src/components/coin/Coin.css
+++ b/src/components/coin/Coin.css
@@ -1,68 +1,87 @@
 .coin-container {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .coin-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-    height: 80px;
-    border-bottom: 1px solid #d7d7d7;
-    width: 900px;
-  }
-  
-  .coin {
-    display: flex;
-    align-items: center;
-    padding-right: 24px;
-  
-    min-width: 300px;
-  }
-  
-  .coin h1 {
-    font-size: 16px;
-    width: 150px;
-  }
-  
-  .coin img {
-    height: 30px;
-    width: 30px;
-    margin-right: 10px;
-  }
-  
-  .coin-symbol {
-    text-transform: uppercase;
-  }
-  
-  .coin-data {
-    display: flex;
-    text-align: right;
-    justify-content: space-between;
-    width: 100%;
-  }
-  
-  .coin-price {
-    width: 110px;
-  }
-  
-  .coin-volume {
-    width: 155px;
-  }
-  
-  .coin-marketcap {
-    width: 230px;
-  }
-  
-  .coin-percent {
-    width: 100px;
-  }
-  
-  .red {
-    color: #f00606;
-  }
-  
-  .green {
-    color: #11d811;
-  }
+  display: flex;
+  justify-content: center;
+}
+
+.coin-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  height: 80px;
+  border: 2px solid black;
+  border-radius: 5px;
+  margin-top: 1rem;
+}
+
+.coin-row:hover{
+  transform: scale(1.1);
+  transform: translate(7px, -7px);
+  transform-style: preserve-3d;
+  transition: all 0.2s ease-in-out;
+  box-shadow: 5px 10px #888888;
+}
+
+.coin {
+  display: flex;
+  align-items: center;
+  padding-right: 24px;
+  padding-left: 15px;
+  min-width: 300px;
+}
+
+.coin h1 {
+  font-size: 16px;
+  padding-right: 10px;
+}
+
+.coin img {
+  height: 30px;
+  width: 30px;
+  margin-right: 10px;
+}
+
+.coin-symbol {
+  text-transform: uppercase;
+}
+
+.coin-data {
+  display: flex;
+  text-align: right;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.coin-price {
+  margin-left: -50px;
+  width: 110px;
+  font-weight: bold;
+}
+
+.coin-chg24h{
+
+}
+
+.coin-volume {
+  width: 155px;
+}
+
+.coin-marketcap {
+  width: 230px;
+  padding-right: 15px;
+}
+
+.coin-percent {
+  width: 100px;
+  padding-right: 15px;
+}
+
+.red {
+  color: #f00606;
+  font-weight: bold;
+}
+
+.green {
+  color: #11d811;
+  font-weight: bold;
+}
