--- a/src/components/news/News.css
+++ b/src/components/news/News.css
@@ -1,6 +1,10 @@
 .articles article {
-  padding: 30px 15px;
-  background-color: #fff;
+  padding: 5px 5px;
+  /* background-color: #fff; */
+  display: block;
+  font-size: 11px;
+  border: 0.5px solid black;
+  margin-left: 5px;
 }
 
 .articles article a {
@@ -11,10 +15,10 @@
   color: #212121;
 }
 
-.articles article:nth-child(2n) {
+/* .articles article:nth-child(2n) {
   background-color: #f3f3f3;
-}
+} */
 
-.articles article:hover {
+/* .articles article:hover {
   background-image: linear-gradient(to right, #fe4880, #ffce00);
-}
+} */
